--- a/templates/main.html
+++ b/templates/main.html
@@ -1,3 +1,8 @@
+
+<input type="text" #ref >
 <h1>Hello {{ name }}</h1>
-<input type="text">
-<button></button>
+<button (click)="name=ref.value">Change Name</button>
+
+<!-- Two way binding -->
+<!-- <input type="text" #name (keyup) >
+<h1>Hello {{ name.value }}</h1> -->
