--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,12 @@
 
-<input type="text" #ref >
-<h1>Hello {{ name }}</h1>
-<button (click)="name=ref.value">Change Name</button>
+<input type="text" placeholder="Title" #title>
+<input type="text" placeholder="Image Url" #imgUrl>
+<button>Add new cat</button>
 
-<!-- Two way binding -->
-<!-- <input type="text" #name (keyup) >
-<h1>Hello {{ name.value }}</h1> -->
+<ul>
+	<li *ng-for="#cat of cats">
+		{{cat.title}} -
+		{{ cat.url }} -
+		{{cat.likes}}
+	</li>
+</ul>
