--- a/templates/main.html
+++ b/templates/main.html
@@ -1,12 +1,15 @@
 
 <input type="text" placeholder="Title" #title>
 <input type="text" placeholder="Image Url" #imgUrl>
-<button (click)="addPost(title, imgUrl)">Add new cat</button>
+<button (click)="addPost($event, title, imgUrl)">Add new cat</button>
 
-<ul>
+<ul class='post-container'>
 	<li *ng-for="#cat of cats">
-		{{cat.title}} -
-		{{ cat.url }} -
-		{{cat.likes}} likes
+		 <div class="title">
+            <h1>{{ cat.title }}</h1>
+            <like>{{ cat.likes }} <span (click)="like($event, cat)">like</span></like>
+        </div>
+		<img [src]="cat.url"/>
+		<span>{{cat.likes}} likes</span>
 	</li>
 </ul>
